k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ecommerce-mf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          # Account ID updated for ECR image path
          image: 385576631527.dkr.ecr.us-east-1.amazonaws.com/ecommerce-mf/api:latest
          ports:
            - containerPort: 3000
