k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: ecommerce-mf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          # Account ID updated for ECR image path
          image: 385576631527.dkr.ecr.us-east-1.amazonaws.com/ecommerce-mf/auth:latest
          ports:
            - containerPort: 80
