k8s/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: ecommerce-mf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          # Replace YOUR_ACCOUNT_ID with your 12-digit AWS account ID
          image: YOUR_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/ecommerce-mf/cart:latest
          ports:
            - containerPort: 80
