k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: ecommerce-mf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          # Replace YOUR_ACCOUNT_ID with your 12-digit AWS account ID
          image: YOUR_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/ecommerce-mf/product:latest
          ports:
            - containerPort: 80
