k8s/shell-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shell
  namespace: ecommerce-mf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shell
  template:
    metadata:
      labels:
        app: shell
    spec:
      containers:
        - name: shell
          # Account ID updated for ECR image path
          image: 385576631527.dkr.ecr.us-east-1.amazonaws.com/ecommerce-mf/shell:latest
          ports:
            - containerPort: 80
