k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: ecommerce-mf
spec:
  selector:
    app: auth
  ports:
    - port: 80
      targetPort: 80
