k8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: ecommerce-mf
spec:
  selector:
    app: cart
  ports:
    - port: 80
      targetPort: 80
