k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: ecommerce-mf
spec:
  selector:
    app: product
  ports:
    - port: 80
      targetPort: 80
