k8s/shell-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shell
  namespace: ecommerce-mf
spec:
  selector:
    app: shell
  ports:
    - port: 80
      targetPort: 80
