k8s/ingress-shell.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shell
  namespace: ecommerce-mf
spec:
  ingressClassName: nginx
  rules:
    - host: a5d10a03df4854b31852097b4df725ec-1461367908.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shell
                port:
                  number: 80
